src/snapshots/latex_expr_parser__lexer__tests__input2.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        start: 0,
        end: 0,
        subscript: None,
    },
    Token {
        kind: WhiteSpace,
        start: 1,
        end: 1,
        subscript: None,
    },
    Token {
        kind: Plus,
        start: 2,
        end: 2,
        subscript: None,
    },
    Token {
        kind: WhiteSpace,
        start: 3,
        end: 3,
        subscript: None,
    },
    Token {
        kind: Identifier,
        start: 4,
        end: 4,
        subscript: None,
    },
]
