src/snapshots/latex_expr_parser__lexer__tests__input4.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        start: 0,
        end: 0,
    },
    Token {
        kind: WhiteSpace,
        start: 1,
        end: 1,
    },
    Token {
        kind: Wedge,
        start: 2,
        end: 7,
    },
    Token {
        kind: WhiteSpace,
        start: 8,
        end: 8,
    },
    Token {
        kind: Identifier,
        start: 9,
        end: 9,
    },
]
