src/snapshots/latex_expr_parser__lexer__tests__input5.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        start: 0,
        end: 0,
        subscript: None,
    },
    Token {
        kind: WhiteSpace,
        start: 1,
        end: 1,
        subscript: None,
    },
    Token {
        kind: Dot,
        start: 2,
        end: 6,
        subscript: None,
    },
    Token {
        kind: WhiteSpace,
        start: 7,
        end: 7,
        subscript: None,
    },
    Token {
        kind: Identifier,
        start: 8,
        end: 8,
        subscript: None,
    },
]
