src/snapshots/latex_expr_parser__lexer__tests__input8.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Identifier,
        start: 0,
        end: 0,
        subscript: Some(
            TokenSubscript {
                start: 2,
                end: 2,
            },
        ),
    },
    Token {
        kind: Identifier,
        start: 3,
        end: 3,
        subscript: None,
    },
]
