src/snapshots/latex_expr_parser__lexer__tests__input9.snap
---
source: src/lexer.rs
expression: tokens
---
[
    Token {
        kind: Int,
        start: 0,
        end: 2,
    },
]
